--- a/akash-deploy/cosmos-balance-deploy.yml
+++ b/akash-deploy/cosmos-balance-deploy.yml
@@ -2,7 +2,7 @@ version: "2.0"
 
 services:
   web:
-    image: reecepbcups/cosmos-balance-bot:latest
+    image: reecepbcups/cosmos-balance-bot:1.2
     env: 
       # only secrets work as env variables. Do not try to use other variables not here.
       # Should allow enable runnable here too
@@ -11,7 +11,7 @@ services:
       - COSMOSBALBOT_SCHEDULER_SCHEDULER_IF_ABOVE_IS_TRUE_HOW_MANY_MINUTES_BETWEEN_CHECKS=1
       - COSMOSBALBOT_DISCORD_WEBHOOK_URL="https://discord.com/api/webhooks/0000000/MY_WEBHOOK_URL"
     expose:      
-      - port: 25563 # just a random port
+      - port: 25563 # just a random port we listen too so the container does not drop
         as: 25563
         to:
           - global: true        
