Notify good balances env variable

--- a/akash-deploy/cosmos-balance-deploy.yml
+++ b/akash-deploy/cosmos-balance-deploy.yml
@@ -1,14 +1,18 @@
 version: "2.0"
 
+# Testing Locally
+# docker run -e COSMOSBALBOT_NOTIFY_GOOD_BALANCES=true -e COSMOSBALBOT_WALLETS='{"WALLETS":{"cosmos10r39fueph9fq7a6lgswu4zdsg8t3gxlqvvvyvn":{"note":"Reeces main cosmos wallet.\nThis is an optional key","warning":1.0,"low":0.25},"osmo1uwqjtgjhjctjc45ugy7ev5prprhehc7w3xx7ph":{"note":"Chandra Restake Wallet","warning":5.0,"low":2.0}}}' -e COSMOSBALBOT_DISCORD_WEBHOOK_URL="https://discord.com/api/webhooks/974114541275818536/WEBOOK_URL" reecepbcups/cosmos-balance-bot:1.1
+
 services:
   web:
     # Be sure you change this to your build to get your public keys JSON from secrets.json
-    image: reecepbcups/balance-bot:1.0
+    image: reecepbcups/balance-bot:1.3
     env: 
-      # only secrets work as env variables. Do not try to use other variables not here.      
+      # only secrets work as env variables. Do not try to use other variables not here.            
       - COSMOSBALBOT_DEBUGGING=false # prints DEBUGGING note on all embeds
+      - COSMOSBALBOT_NOTIFY_GOOD_BALANCES=true
       - COSMOSBALBOT_SCHEDULER_USE_PYTHON_RUNNABLE=true # must be true for docker
-      - COSMOSBALBOT_SCHEDULER_IF_ABOVE_IS_TRUE_HOW_MANY_MINUTES_BETWEEN_CHECKS=30
+      - COSMOSBALBOT_SCHEDULER_IF_ABOVE_IS_TRUE_HOW_MANY_MINUTES_BETWEEN_CHECKS=240
       - COSMOSBALBOT_DISCORD_WEBHOOK_URL="https://discord.com/api/webhooks/0000000/MY_WEBHOOK_URL"
     expose:      
       - port: 25563 # just a random port we listen too so the container does not drop
@@ -21,7 +25,7 @@ profiles:
     web:
       resources:
         cpu:
-          units: 1
+          units: 0.25
         memory:
           size: 1Gi
         storage:
