--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,10 +1,9 @@
 ## INSTALL
-# pip install -r requirements.txt
+# pip install -r requirements/requirements.txt --upgrade
 
-## UPDATE DEENDS
 # pip install pipreqs && pipreqs .
 discord.py==1.7.3
 requests==2.27.1
 schedule==1.1.0
-python-ibc>=0.2.0a1
+python-ibc>=0.2.0
 discord_webhook
